[package]
name = "complex"
version = "0.7.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/complex"
homepage = "https://github.com/stainless-steel/complex"
documentation = "https://stainless-steel.github.io/complex"
description = "The package provides complex numbers."
